@@ -1,7 +1,12 @@
 # umx 1.3.1
 * R 3.3.1 companion: "Bug in your Hair" August 2016
-* CHANGE umxRAM remove_unused_manifests no-longer updates manifestVars, just leaves the variable in the data.
-* CHANGE umxGetOpenMx to install.OpenMx or umx_install_OpenMx
+* NEW: support definition variables as an umxPath type, e.g.
+  * umxPath(defn = "def", labels = "data.age")
+* IMPROVE: More concise feedback
+* IMPROVE: support definition variables as an umxPath type, e.g.
+* IMPROVE: umxRAM remove_unused_manifests no-longer updates manifestVars, just leaves the variable in the data.
+* CHANGE: umxGetOpenMx to install.OpenMx or umx_install_OpenMx
+* CHANGE: "showFixed" to "fixed" in plot
 
 # umx 1.3.0
 * R 3.3.1 companion: "Bug in your Hair" August 2016
